update secondary databases

--- a/studies/bib/extractions.bib
+++ b/studies/bib/extractions.bib
@@ -1105,8 +1105,8 @@ FINAL_NOTES = {models differ in number of relevant features.}
   STIMULUS_TYPE = {million songs dataset}, %% blues, classical, country, disco, hiphop, jazz, metal, pop, reggae, rock
   STIMULUS_DURATION = {not specified},
   STIMULUS_DURATION_UNIT = {not specified},
-  STIMULUS_N = {1000}, %% it's called the million songs dataset, but authors say it contains 10 genres x 100 songs? webpage also provides access to random 10,000 subset. unclear what they used
-  FEATURE_N = {55?}, 
+  STIMULUS_N = {unclear from study}, %% it's called the million songs dataset, but authors say it contains 10 genres x 100 songs? webpage also provides access to random 10,000 subset. unclear what they used
+  FEATURE_N = {unclear from study}, 
   PARTICIPANT_N = {not specified; use million songs database. I think it auto-fetches tags from last.fm}, 
   PARTICIPANT_EXPERTISE = {not specified. use million songs database}, %% 
   PARTICIPANT_ORIGIN = {online},
