update secondary databases
include citation details for secondary databases

--- a/studies/bib/extractions.bib
+++ b/studies/bib/extractions.bib
@@ -202,11 +202,11 @@ bind_field(
   STIMULUS_DURATION_UNIT = {s},
   STIMULUS_N = {744},
   FEATURE_N = {548. Post-reduction: 139 (PCA), 276 (ReliefF)},
-  PARTICIPANT_N = {specified elsewhere},
-  PARTICIPANT_EXPERTISE = {specified elsewhere},
-  PARTICIPANT_ORIGIN = {specified elsewhere},
-  PARTICIPANT_SAMPLING = {specified elsewhere},
-  PARTICIPANT_TASK = {specified elsewhere},
+  PARTICIPANT_N = {10 per clip (300+)},
+  PARTICIPANT_EXPERTISE = {Nonexperts (Mturk) + experts},
+  PARTICIPANT_ORIGIN = {MTurk},
+  PARTICIPANT_SAMPLING = {crowdsource},
+  PARTICIPANT_TASK = {rate},
   FEATURE_CATEGORIES = {rhythm, tonality, timbre, pitch, melody},
   FEATURE_SOURCE = {Daubechies, Sound Description Toolbox, MIRToolbox},
   FEATURE_REDUCTION_METHOD = {PCA, ReliefF},
@@ -559,15 +559,15 @@ summarize_matrix
   NOTES_TE = {include},
   EMOTIONS = {288 emotion labels}, %% used for classification of VA. Presumably quadrant detection
   EMOTION_LOCUS = {perceived},
-  STIMULUS_TYPE = {AMG},
+  STIMULUS_TYPE = {pop},
   STIMULUS_DURATION = {30},
   STIMULUS_DURATION_UNIT = {s},
   STIMULUS_N = {300},
   FEATURE_N = {397},
-  PARTICIPANT_N = {not specified}, %% AMG
-  PARTICIPANT_EXPERTISE = {experts}, %% AMG
-  PARTICIPANT_ORIGIN = {not specified},
-  PARTICIPANT_SAMPLING = {not specified},
+  PARTICIPANT_N = {NA}, 
+  PARTICIPANT_EXPERTISE = {experts from AMG website; insufficient detail}, 
+  PARTICIPANT_ORIGIN = {NA},
+  PARTICIPANT_SAMPLING = {NA},
   PARTICIPANT_TASK = {annotate},
   FEATURE_CATEGORIES = {Harmony, Rhythm, Dynamic, Timbre, Melody},
   FEATURE_SOURCE = {Sound Description Toolbox, MIR Toolbox, Marsyas, PsySound},
@@ -776,13 +776,13 @@ summarize_matrix
   STIMULUS_DURATION = {45},
   STIMULUS_DURATION_UNIT =  {s},
   STIMULUS_N = {744},
-  FEATURE_N = {not specified? 7 in best model}, 
-  PARTICIPANT_N = {specified elsewhere},
-  PARTICIPANT_EXPERTISE = {specified elsewhere},
-  PARTICIPANT_ORIGIN = {specified elsewhere},
-  PARTICIPANT_SAMPLING = {specified elsewhere},
-  PARTICIPANT_TASK = {specified elsewhere},
-  FEATURE_CATEGORIES = {timbre, dynamic, },
+  FEATURE_N = {not specified? 7 in best model; 6670 in MediaEval}, 
+  PARTICIPANT_N = {10 per clip (300+)},
+  PARTICIPANT_EXPERTISE = {Nonexperts (Mturk) + experts},
+  PARTICIPANT_ORIGIN = {MTurk},
+  PARTICIPANT_SAMPLING = {crowdsource},
+  PARTICIPANT_TASK = {rate},
+  FEATURE_CATEGORIES = {Pitch, Timbre, Voice, Dynamic},
   FEATURE_SOURCE =  {not specified},
   FEATURE_REDUCTION_METHOD =  {back-propogation},
   MODEL_CATEGORY = {regression},
@@ -1125,7 +1125,7 @@ FINAL_NOTES = {models differ in number of relevant features.}
   'valence_mae' = 0.974, 'arousal_mae' = 0.985)
   )}, %% results of model without IoT features. Unclear what model they're reporting on but likely the same RNN using LTSM and STS
   MODEL_VALIDATION = {cross-validation},
-  FINAL_NOTES = {}
+  FINAL_NOTES = {!EXCL! insufficient details on stimulus n or feature n}
 }
 
 
@@ -1199,19 +1199,19 @@ FINAL_NOTES = {models differ in number of relevant features.}
   EMOTIONS = {valence, arousal},
   EMOTION_LOCUS = {perceived},
   STIMULUS_TYPE = {NTUMIR, MediaEval2013},
-  STIMULUS_DURATION = {NTUMIR: 30, MediaEval2013: specified elsewhere},
+  STIMULUS_DURATION = {NTUMIR: 30, MediaEval2013: 45},
   STIMULUS_DURATION_UNIT = {seconds},
   STIMULUS_N = {NTUMIR: 60, MediaEval2013: 744},
-  FEATURE_N = {NTUMIR: ?; MediaEval: 6669},
-  PARTICIPANT_N = {c(NTUMIR = 99, MediaEval2013 = ?)},
+  FEATURE_N = {NTUMIR: 46; MediaEval: 6669},
+  PARTICIPANT_N = {NTUMIR = 99, MediaEval2013 = 300},
   PARTICIPANT_EXPERTISE = {no limitation},
-  PARTICIPANT_ORIGIN = {NTUMIR: Taiwan; MediaEval2013: United States},
-  PARTICIPANT_SAMPLING = {NTUMIR: specified on web; MediaEval2013: MTurk},
+  PARTICIPANT_ORIGIN = {NTUMIR: Taiwan; MediaEval2013: MTurk},
+  PARTICIPANT_SAMPLING = {crowdsource},
   PARTICIPANT_TASK = {rate},
   FEATURE_CATEGORIES = {NTUMIR: Harmony = 10, Timbre = 90, Temporal? = 6, rhythm = 61, lyrics = ?, MediaEval2013: Harmony, pitch, timbre, dynamic, other)
 )
 },
-  FEATURE_SOURCE = {NTUMIR: MIRToolbox; MediaEval2013: openSMILE},
+  FEATURE_SOURCE = {NTUMIR: MIRToolbox, Sound Description Toolbox, MA Toolbox; MediaEval2013: openSMILE},
   FEATURE_REDUCTION_METHOD = {kernel principal component analysis},
   MODEL_CATEGORY = {regression},
   MODEL_DETAIL = {support vector regression, kNN, kernal principle component analysis},
@@ -1252,20 +1252,20 @@ bind_field(
   NOTES_TE = {include},
   EMOTIONS = {valence, arousal},
   EMOTION_LOCUS = {perceived},
-  STIMULUS_TYPE = {MediaEval2014: specified elsewhere; MP_db: classical, contemporary western art, baroque, bossa nova, rock, pop, heavy metal, film music},
+  STIMULUS_TYPE = {MediaEval2014: western pop; MP_db: classical, contemporary western art, baroque, bossa nova, rock, pop, heavy metal, film music},
   STIMULUS_DURATION = {variable},
   STIMULUS_DURATION_UNIT = {seconds},
   STIMULUS_N = {1020; MediaEval2014: 1000: music perception database 1: 6, music perception database 2: 9, music perception database 3: 8, music perception database 4: 7
 },
   FEATURE_N = {130},
-  PARTICIPANT_N = {c(MediaEval2014 = 'specified elsewhere',
+  PARTICIPANT_N = {MediaEval2014 = 300,
   MP_db1 = 35,
   MP_db2 = 39,
   MP_db3 = 52,
   MP_db4 = 38)
 },
   PARTICIPANT_EXPERTISE = {not specified},
-  PARTICIPANT_ORIGIN = {?},
+  PARTICIPANT_ORIGIN = {MediaEval: MTurk; psychology databases: various},
   PARTICIPANT_SAMPLING = {crowd source, convenience},
   PARTICIPANT_TASK = {rate},
   FEATURE_CATEGORIES = {pitch, timbre, dynamic}, %% i simplify their table. they call some cues vocal, but they seem to fit better with panda's timbre features. includes jitter and shimmer which aren't in panda tables,
@@ -1833,13 +1833,13 @@ exp5: train = selected sets (varied), test = selected sets (varied), factor exam
   STIMULUS_TYPE = {MediaEval},
   STIMULUS_DURATION = {45},
   STIMULUS_DURATION_UNIT = {s},
-  STIMULUS_N = {1000},
+  STIMULUS_N = {744},
   FEATURE_N = {model 1: 52, model 2 = 68, model 3 = 260, model 4 = 388}, %% between 52 and 388 depending on model
   PARTICIPANT_N = {100},
-  PARTICIPANT_EXPERTISE = {specified elsewhere},
-  PARTICIPANT_ORIGIN = {specified elsewhere},
-  PARTICIPANT_SAMPLING = {specified elsewhere},
-  PARTICIPANT_TASK = {specified elsewhere},
+  PARTICIPANT_EXPERTISE = {Nonexperts (Mturk) + experts},
+  PARTICIPANT_ORIGIN = {MTurk},
+  PARTICIPANT_SAMPLING = {crowdsource},
+  PARTICIPANT_TASK = {rate},
   FEATURE_CATEGORIES = {timbre, speech, pitch},
   FEATURE_SOURCE = {Marsyas},
   FEATURE_REDUCTION_METHOD = {none},
@@ -1889,12 +1889,12 @@ exp5: train = selected sets (varied), test = selected sets (varied), factor exam
   STIMULUS_DURATION_UNIT = {s},
   STIMULUS_N = {1802},
   FEATURE_N = {260},
-  PARTICIPANT_N = {specified elsewhere},
-  PARTICIPANT_EXPERTISE = {specified elsewhere},
-  PARTICIPANT_ORIGIN = {specified elsewhere},
-  PARTICIPANT_SAMPLING = {specified elsewhere},
-  PARTICIPANT_TASK = {specified elsewhere},
-  FEATURE_CATEGORIES = {specified elsewhere},
+  PARTICIPANT_N = {10 per clip (300+)},
+  PARTICIPANT_EXPERTISE = {Nonexperts (Mturk) + experts},
+  PARTICIPANT_ORIGIN = {MTurk},
+  PARTICIPANT_SAMPLING = {crowdsource},
+  PARTICIPANT_TASK = {rate},
+  FEATURE_CATEGORIES = {Pitch, Timbre, Voice, Dynamic},
   FEATURE_SOURCE = {openSMILE},
   FEATURE_REDUCTION_METHOD = {principal component analysis},
   MODEL_CATEGORY = {classification},
@@ -1934,15 +1934,15 @@ exp5: train = selected sets (varied), test = selected sets (varied), factor exam
   STIMULUS_DURATION = {45},
   STIMULUS_DURATION_UNIT = {s},
   STIMULUS_N = {431}, %% subset of DEAM
-  FEATURE_N = {specified elsewhere},
-  PARTICIPANT_N = {specified elsewhere},
-  PARTICIPANT_EXPERTISE = {specified elsewhere},
-  PARTICIPANT_ORIGIN = {specified elsewhere},
-  PARTICIPANT_SAMPLING = {specified elsewhere},
+  FEATURE_N = {Features deep-learned from audio (not specified) but 1802 in DEAM},
+  PARTICIPANT_N = {Total n not specified. Minimum annotations per piece: 2013-14: 10; 2015: 5 MTurk workers},
+  PARTICIPANT_EXPERTISE = {no restrictions},
+  PARTICIPANT_ORIGIN = {2013-14: MTurk; 2015: MTurk and Lab workers},
+  PARTICIPANT_SAMPLING = {crowdsourcing, convenience},
   PARTICIPANT_TASK = {rate},
-  FEATURE_CATEGORIES = {specified elsewhere},
-  FEATURE_SOURCE = {OpenSMILE}, %% specified elsewhere. Take notes on features...
-  FEATURE_REDUCTION_METHOD = {not specified},
+  FEATURE_CATEGORIES = {Pitch, Timbre, Voice, Dynamic},
+  FEATURE_SOURCE = {OpenSMILE}, 
+  FEATURE_REDUCTION_METHOD = {deep-learning study},
   MODEL_CATEGORY = {regression},
   MODEL_DETAIL = {deep-neural-network: 1D convolution layer, autoencoder-based layer with iterative reconstruction, bidirectional gated recurrent unit;
 time-distributed-layer: CNN, iterative reconstruction, bidirectional gated recurrent unit},
@@ -2329,10 +2329,10 @@ time-distributed-layer: CNN, iterative reconstruction, bidirectional gated recur
   STIMULUS_DURATION_UNIT = {s},
   STIMULUS_N = {744}, 
   FEATURE_N = {not specified},
-  PARTICIPANT_N = {minimum of 10 human annotators},
-  PARTICIPANT_EXPERTISE = {specified elsewhere},
-  PARTICIPANT_ORIGIN = {specified elsewhere},
-  PARTICIPANT_SAMPLING = {specified elsewhere},
+  PARTICIPANT_N = {10 per clip (300+)},
+  PARTICIPANT_EXPERTISE = {Nonexperts (Mturk) + experts},
+  PARTICIPANT_ORIGIN = {MTurk},
+  PARTICIPANT_SAMPLING = {crowdsource},
   PARTICIPANT_TASK = {rate},
   FEATURE_CATEGORIES = {timbre},
   FEATURE_SOURCE = {openSMILE},
@@ -2377,14 +2377,14 @@ time-distributed-layer: CNN, iterative reconstruction, bidirectional gated recur
   EMOTIONS = {valence, arousal},
   EMOTION_LOCUS =  {perceived},
   STIMULUS_TYPE = {Chinese pop songs from PSIC3839},
-  STIMULUS_DURATION = {specified elsewhere},
+  STIMULUS_DURATION = {not specified (presumably full)},
   STIMULUS_DURATION_UNIT = {s},
   STIMULUS_N = {2372 (subset of PSIC3839, total n: 3839)},  
   FEATURE_N = {50 PCA features}, %%
-  PARTICIPANT_N = {specified elsewhere},
-  PARTICIPANT_EXPERTISE = {specified elsewhere},
+  PARTICIPANT_N = {87},
+  PARTICIPANT_EXPERTISE = {no restrictions},
   PARTICIPANT_ORIGIN = {China},
-  PARTICIPANT_SAMPLING = {specified elsewhere},
+  PARTICIPANT_SAMPLING = {convenience},
   PARTICIPANT_TASK = {rate},
   FEATURE_CATEGORIES = {rhythm, timbre, pitch, harmony},
   FEATURE_SOURCE = {librosa},
@@ -2423,14 +2423,14 @@ time-distributed-layer: CNN, iterative reconstruction, bidirectional gated recur
   EMOTIONS = {valence, arousal},
   EMOTION_LOCUS = {perceived},
   STIMULUS_TYPE = {Chinese popular music from Zhang et al. (2015) },
-  STIMULUS_DURATION = {Specified elsewhere},
+  STIMULUS_DURATION = {30},
   STIMULUS_DURATION_UNIT = {s},
-  STIMULUS_N = {Specified elsewhere},
+  STIMULUS_N = {171},
   FEATURE_N = {119},
-  PARTICIPANT_N = {Specified elsewhere},
-  PARTICIPANT_EXPERTISE = {Specified elsewhere},
-  PARTICIPANT_ORIGIN = {Specified elsewhere}, %% presumably china
-  PARTICIPANT_SAMPLING = {Specified elsewhere},
+  PARTICIPANT_N = {10},
+  PARTICIPANT_EXPERTISE = {nonexperts},
+  PARTICIPANT_ORIGIN = {China},
+  PARTICIPANT_SAMPLING = {convenience},
   PARTICIPANT_TASK = {rate},
   FEATURE_CATEGORIES = {dynamic, timbre, rhythm, tonality }, %% "we make an assumption that the arousal is only dependent on the intensity features, and valence is dependent on the whole feature sets" 
   FEATURE_SOURCE = {MA Toolbox, MIR Toolbox, coversongs},
@@ -2530,14 +2530,14 @@ Discriminant Analysis (RDA).},
   EMOTIONS = {valence, arousal},
   EMOTION_LOCUS = {perceived},
   STIMULUS_TYPE =  {PMEmo, DEAM}, %% PMEmo: new, DEAM: benchmark
-  STIMULUS_DURATION = {DEAM: 45, PMEmo: specified elsewhere}, %% PMEmo has 794. Rest removed due to insufficieent annotation #
+  STIMULUS_DURATION = {DEAM: 45, PMEmo: variable}, %% PMEmo has 794. Rest removed due to insufficieent annotation #
   STIMULUS_DURATION_UNIT = {s},
   STIMULUS_N = {DEAM: 744, PMEmo: 206},
   FEATURE_N = { }, %% how to report
-  PARTICIPANT_N = {specified elsewhere},
-  PARTICIPANT_EXPERTISE = {specified elsewhere},
-  PARTICIPANT_ORIGIN = {specified elsewhere},
-  PARTICIPANT_SAMPLING = {specified elsewhere},
+  PARTICIPANT_N = {DEAM: at least 10 per piece, PMEmo: 457},
+  PARTICIPANT_EXPERTISE = {primarily nonexperts},
+  PARTICIPANT_ORIGIN = {DEAM: MTurk; PMEmo: lab},
+  PARTICIPANT_SAMPLING = {DEAM: crowdsource; PMEmo: convenience},
   PARTICIPANT_TASK = {rate},
   FEATURE_CATEGORIES = {filter banks, handcrafted},
   FEATURE_SOURCE = {filter bank output (size = 120*120), 60 handcrafted features (size = 60*60)},
