update secondary databases and annotations
add data to nonspecified entries using etc/secondary databases.md

--- a/studies/bib/extractions.bib
+++ b/studies/bib/extractions.bib
@@ -18,17 +18,17 @@
   NOTES_CA = {include, classification},
   NOTES_TE = {include, classification},
   EMOTIONS = {discrete},
-  EMOTION_LOCUS = {not specified},
+  EMOTION_LOCUS = {perceived},
   STIMULUS_TYPE = {Hindi music, English music (from ISMIR2012, NJU_V1, and Hindi datasets)},
-  STIMULUS_DURATION = {not specified},
-  STIMULUS_DURATION_UNIT = {not specified},
+  STIMULUS_DURATION = {ISMIR: 30 or 60s, NJU_V1: variable; Hindi music: not specified},
+  STIMULUS_DURATION_UNIT = {s},
   STIMULUS_N = {ISMIR2012: 2886, NJU_V1: 777, Hindi: 1037},
   FEATURE_N = {'eight different non‐text‐dependent features are employed; they are rhythm, timbre,intensity, chromagram, MFCC, OSC, SSDs, and DWCH'}, %% unclear from paper... may be worth reviewing
-  PARTICIPANT_N = {not specified},
-  PARTICIPANT_EXPERTISE = {not specified},
-  PARTICIPANT_ORIGIN = {not specified},
-  PARTICIPANT_SAMPLING = {not specified},
-  PARTICIPANT_TASK = {rating},
+  PARTICIPANT_N = {NA (tags)},
+  PARTICIPANT_EXPERTISE = {NA},
+  PARTICIPANT_ORIGIN = {NA},
+  PARTICIPANT_SAMPLING = {NA},
+  PARTICIPANT_TASK = {NA},
   FEATURE_CATEGORIES = {Timbre, Rhythm, Dynamic, Harmony, Lyric},
   FEATURE_SOURCE = {not specified},
   FEATURE_REDUCTION_METHOD = {KMBSO},
@@ -124,25 +124,25 @@
   NOTES_CA = {include, classification task},
   NOTES_TE = {include, classification, spotify},
   EMOTIONS = {discrete},
-  EMOTION_LOCUS = {not specified},
+  EMOTION_LOCUS = {perceived},
   STIMULUS_TYPE = {Spotify},
   STIMULUS_DURATION = {150 approx},
   STIMULUS_DURATION_UNIT = {s}, 
   STIMULUS_N = {5192; 12 per user in user validation (not included here due to little information),
   AcousticBrainz validation: 60000},
-  FEATURE_N = {9 to 10},
+  FEATURE_N = {between 9 and 10},
   PARTICIPANT_N = {25},
-  PARTICIPANT_EXPERTISE = {'not specified'},
-  PARTICIPANT_ORIGIN = {'not specified'},
-  PARTICIPANT_SAMPLING = {'not specified'},
-  PARTICIPANT_TASK = {'classification'},
+  PARTICIPANT_EXPERTISE = {not specified},
+  PARTICIPANT_ORIGIN = {online},
+  PARTICIPANT_SAMPLING = {not specified},
+  PARTICIPANT_TASK = {classification},
   FEATURE_CATEGORIES = {timbre,  dynamic, high-level, expressivity},
   FEATURE_SOURCE = {Spotify API},
   FEATURE_REDUCTION_METHOD = {expert validation},
   MODEL_CATEGORY = {classification},
   MODEL_DETAIL = {SVR, KNN, RF},
   MODEL_MEASURE = {classification accuracy, f1, precision, recall},
-  MODEL_COMPLEXITY_PARAMETERS = {unable to find},
+  MODEL_COMPLEXITY_PARAMETERS = {not specified},
   MODEL_RATE_EMOTION_NAMES = {happy, sad, angry, relaxed; Experimental validation: excited, cheerful, tense, irritated, sad, bored, relaxed, calm, don't know}, 
   MODEL_RATE_EMOTION_VALUES = {
 bind_field(
@@ -255,16 +255,16 @@ bind_field(
   EMOTIONS = {quadrants},
   EMOTION_LOCUS = {not specified},
   STIMULUS_TYPE = {EMOPIA; pop piano recordings},
-  STIMULUS_DURATION = {not specified},
-  STIMULUS_DURATION_UNIT = {not specified},
-  STIMULUS_N =  {not specified},
+  STIMULUS_DURATION = {30 to 40 s},
+  STIMULUS_DURATION_UNIT = {s},
+  STIMULUS_N =  {387},
   FEATURE_N = {summarize feature categories, but aren't explicit about which ones},
-  PARTICIPANT_N = {not specified},
+  PARTICIPANT_N = {4 total, 1 per song (annotators, not ppts)},
   PARTICIPANT_EXPERTISE = {not specified},
   PARTICIPANT_ORIGIN = {not specified},
-  PARTICIPANT_SAMPLING = {not specified},
-  PARTICIPANT_TASK = {not specified},
-  FEATURE_CATEGORIES = {harmony, dynamic, rhythm}, %% include counts??
+  PARTICIPANT_SAMPLING = {presumably the researchers},
+  PARTICIPANT_TASK = {classify},
+  FEATURE_CATEGORIES = {harmony, dynamic, rhythm, timbre}, 
   FEATURE_SOURCE = {PrettyMIDI},
   FEATURE_REDUCTION_METHOD = {NA},
   MODEL_CATEGORY = {classification},
@@ -325,7 +325,7 @@ summarize_matrix
   c4 (sad): poignant, brooding, melancholic, mournful, tragic, gloomy, dark, creepy, paranoid;
   c5 (mad) = agressive, volatile, fiery, threatening, hostile, belligerent, arrogant, angry, NA
 },
-  EMOTION_LOCUS = {not specified},
+  EMOTION_LOCUS = {perceived},
   STIMULUS_TYPE = {pop, disco, soul, rock, jazz, electronic, hip-hop, classical, dance, heavy metal, contemporary, reggae, country, latino, traditional etc.},
   STIMULUS_DURATION = {30},
   STIMULUS_DURATION_UNIT = {seconds},
@@ -681,12 +681,12 @@ summarize_matrix
   EMOTIONS = {valence, arousal},
   EMOTION_LOCUS = {perceived},
   STIMULUS_TYPE = {DEAM},
-  STIMULUS_DURATION = {not specified},
-  STIMULUS_DURATION_UNIT = {not specified},
+  STIMULUS_DURATION = {58 full-length and 1744 45-second excerpts},
+  STIMULUS_DURATION_UNIT = {s},
   STIMULUS_N = {1802}, %% report train or test?
   FEATURE_N = {122},
-  PARTICIPANT_N = {not specified},
-  PARTICIPANT_EXPERTISE = {not specified},
+  PARTICIPANT_N = {Total n not specified. Minimum annotations per piece: 2013-14: 10; 2015: 5 MTurk workers},
+  PARTICIPANT_EXPERTISE = {no restrictions},
   PARTICIPANT_ORIGIN = {MTurk},
   PARTICIPANT_SAMPLING = {crowdsourced},
   PARTICIPANT_TASK = {rate},
@@ -783,7 +783,7 @@ summarize_matrix
   PARTICIPANT_SAMPLING = {crowdsource},
   PARTICIPANT_TASK = {rate},
   FEATURE_CATEGORIES = {Pitch, Timbre, Voice, Dynamic},
-  FEATURE_SOURCE =  {not specified},
+  FEATURE_SOURCE =  {OpenSMILE},
   FEATURE_REDUCTION_METHOD =  {back-propogation},
   MODEL_CATEGORY = {regression},
   MODEL_DETAIL = {back-propogation neural network, artificial bee colony algorithm, SVM, KNN, GMM, BP},
@@ -948,16 +948,16 @@ larized Discriminant Analysis (SCRDA)},
   NOTES_CA = {include},
   NOTES_TE = {include},
   EMOTIONS = {valence, arousal},
-  EMOTION_LOCUS = {not specified},
+  EMOTION_LOCUS = {perceived},
   STIMULUS_TYPE = {MediaEval},
   STIMULUS_DURATION = {45},
   STIMULUS_DURATION_UNIT = {s},
   STIMULUS_N = {744}, %% break into train and test sets?
   FEATURE_N = {548; after reduction, 139 for PCA and 276 for ReliefF}, 
-  PARTICIPANT_N = {not specified},
-  PARTICIPANT_EXPERTISE = {not specified}, %% could try to pull this from original study
-  PARTICIPANT_ORIGIN = {not specified},
-  PARTICIPANT_SAMPLING = {not specified},
+  PARTICIPANT_N = {10 per clip (300+)},
+  PARTICIPANT_EXPERTISE = {Nonexperts (Mturk) + experts}, %% could try to pull this from original study
+  PARTICIPANT_ORIGIN = {Mturk},
+  PARTICIPANT_SAMPLING = {Crowdsourcing, presumed convenience for experts},
   PARTICIPANT_TASK = {rate},
   FEATURE_CATEGORIES = {rhythm, dynamic, timbre, harmony, pitch},
   FEATURE_SOURCE = {Daubechies, MIRToolbox, Sound Description toolbox},
