correct participant N for DEAM, mediaeval

--- a/studies/bib/extractions.bib
+++ b/studies/bib/extractions.bib
@@ -202,7 +202,7 @@ bind_field(
   STIMULUS_DURATION_UNIT = {s},
   STIMULUS_N = {744},
   FEATURE_N = {548. Post-reduction: 139 (PCA), 276 (ReliefF)},
-  PARTICIPANT_N = {10 per clip (300+)},
+  PARTICIPANT_N = {10 per clip (100 qualified workers)},
   PARTICIPANT_EXPERTISE = {Nonexperts (Mturk) + experts},
   PARTICIPANT_ORIGIN = {MTurk},
   PARTICIPANT_SAMPLING = {crowdsource},
@@ -685,7 +685,7 @@ summarize_matrix
   STIMULUS_DURATION_UNIT = {s},
   STIMULUS_N = {1802}, %% report train or test?
   FEATURE_N = {122},
-  PARTICIPANT_N = {Total n not specified. Minimum annotations per piece: 2013-14: 10; 2015: 5 MTurk workers},
+  PARTICIPANT_N = {Minimum annotations per piece: 2013-14: 10; 2015: 5 MTurk workers (100 qualified workers for MediaEval)},
   PARTICIPANT_EXPERTISE = {no restrictions},
   PARTICIPANT_ORIGIN = {MTurk},
   PARTICIPANT_SAMPLING = {crowdsourced},
@@ -777,7 +777,7 @@ summarize_matrix
   STIMULUS_DURATION_UNIT =  {s},
   STIMULUS_N = {744},
   FEATURE_N = {not specified? 7 in best model; 6670 in MediaEval}, 
-  PARTICIPANT_N = {10 per clip (300+)},
+  PARTICIPANT_N = {10 per clip (100 qualified workers)},
   PARTICIPANT_EXPERTISE = {Nonexperts (Mturk) + experts},
   PARTICIPANT_ORIGIN = {MTurk},
   PARTICIPANT_SAMPLING = {crowdsource},
@@ -954,7 +954,7 @@ larized Discriminant Analysis (SCRDA)},
   STIMULUS_DURATION_UNIT = {s},
   STIMULUS_N = {744}, %% break into train and test sets?
   FEATURE_N = {548; after reduction, 139 for PCA and 276 for ReliefF}, 
-  PARTICIPANT_N = {10 per clip (300+)},
+  PARTICIPANT_N = {10 per clip (100 qualified workers)},
   PARTICIPANT_EXPERTISE = {Nonexperts (Mturk) + experts}, %% could try to pull this from original study
   PARTICIPANT_ORIGIN = {Mturk},
   PARTICIPANT_SAMPLING = {Crowdsourcing, presumed convenience for experts},
@@ -1889,7 +1889,7 @@ exp5: train = selected sets (varied), test = selected sets (varied), factor exam
   STIMULUS_DURATION_UNIT = {s},
   STIMULUS_N = {1802},
   FEATURE_N = {260},
-  PARTICIPANT_N = {10 per clip (300+)},
+  PARTICIPANT_N = {10 per clip (100 qualified workers)},
   PARTICIPANT_EXPERTISE = {Nonexperts (Mturk) + experts},
   PARTICIPANT_ORIGIN = {MTurk},
   PARTICIPANT_SAMPLING = {crowdsource},
@@ -1935,7 +1935,7 @@ exp5: train = selected sets (varied), test = selected sets (varied), factor exam
   STIMULUS_DURATION_UNIT = {s},
   STIMULUS_N = {431}, %% subset of DEAM
   FEATURE_N = {Features deep-learned from audio (not specified) but 1802 in DEAM},
-  PARTICIPANT_N = {Total n not specified. Minimum annotations per piece: 2013-14: 10; 2015: 5 MTurk workers},
+  PARTICIPANT_N = {Minimum annotations per piece: 2013-14: 10; 2015: 5 MTurk workers (100 qualified workers for MediaEval)},
   PARTICIPANT_EXPERTISE = {no restrictions},
   PARTICIPANT_ORIGIN = {2013-14: MTurk; 2015: MTurk and Lab workers},
   PARTICIPANT_SAMPLING = {crowdsourcing, convenience},
@@ -2329,7 +2329,7 @@ time-distributed-layer: CNN, iterative reconstruction, bidirectional gated recur
   STIMULUS_DURATION_UNIT = {s},
   STIMULUS_N = {744}, 
   FEATURE_N = {not specified},
-  PARTICIPANT_N = {10 per clip (300+)},
+  PARTICIPANT_N = {10 per clip (100 qualified workers)},
   PARTICIPANT_EXPERTISE = {Nonexperts (Mturk) + experts},
   PARTICIPANT_ORIGIN = {MTurk},
   PARTICIPANT_SAMPLING = {crowdsource},
